# CoverGen

./: .env.sample  .gitignore  README.md  pyproject.toml
covergen/: __init__.py  cli.py  config.py  cv_loader.py  job_fetcher.py  latex.py  llm.py  pipeline.py  prompting.py
covergen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
data/: cv.sample.txt  cv.txt
templates/: cover_letter.tex.j2
